# CompressImageByHuffman

./: CMakeCache.txt  README.md  build.gradle  settings.gradle
CompressImageByHuffmanExample/: build.gradle
CompressImageByHuffmanExample/src/main/: AndroidManifest.xml
CompressImageByHuffmanExample/src/main/res/values/: styles.xml
app/: build.gradle
app/libs/: imageselector-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: custom_progress_dialog_bg.xml
app/src/main/res/layout/: activity_browser_images_item_pager.xml  activity_image_preview.xml  activity_main.xml  layout_custom_progress_dialog_view.xml
app/src/main/res/values/: strings.xml  styles.xml
compress/: CMakeLists.txt  build.gradle
compress/src/main/: AndroidManifest.xml
compress/src/main/cpp/: compress.c  compress.h  lang.h  log.h
compress/src/main/java/com/lishuaihua/compress/: BaseViewModel.kt  CompressListener.java  CompressListener.kt  CompressPictureUtil.java  CompressPictureUtil.kt  FileUtils.kt  ImageCompress.java  ImageCompress.kt
compress/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
imageselector/: build.gradle
imageselector/src/main/: AndroidManifest.xml
imageselector/src/main/java/com.lishuaihua.imageselector/: ClipImageActivity.java  ImageSelectorActivity.java  PreviewActivity.java
imageselector/src/main/res/layout/: activity_clip_image.xml  activity_preview.xml  adapter_camera.xml  adapter_images_item.xml
imageselector/src/main/res/values-hi-rIN/: strings.xml
(+43 files in other folders)
